--- a/src/css/sass/global/_errorpage.scss
+++ b/src/css/sass/global/_errorpage.scss
@@ -5,7 +5,7 @@
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
         sans-serif;
     opacity: 0.95;
-    background-image: url("../../../images/error/bgerrorpage.jpg");
+    background-image: url("images/error/bgerrorpage.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
