--- a/src/css/sass/global/_errorpage.scss
+++ b/src/css/sass/global/_errorpage.scss
@@ -6,7 +6,8 @@
         sans-serif;
     opacity: 0.95;
     // background-image: url("images/error/bgerrorpage.jpg");
-    background-image: url("/public/images/error/bgerrorpage.jpg");
+    // background-image: url("images/error/bgerrorpage.jpg");
+    background-image: url("../../../../public/images/error/bgerrorpage.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
