--- a/src/css/sass/global/_landing.scss
+++ b/src/css/sass/global/_landing.scss
@@ -7,7 +7,7 @@
     // background-size: contain;
     // background-position: right;
     // background-attachment: fixed;
-    background: url("../../../images/landing/back.jpg");
+    background: url("../../../../public/images/landing/back.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
